# Kispe91

./: .gitignore  README.md
week-01/day-3/01-HelloMe/: main.cpp
week-01/day-3/02-HumptyDumpty/: main.cpp
week-01/day-3/03-HelloOthers/: main.cpp
week-01/day-3/04-IntroduceYourself/: main.cpp
week-01/day-3/05-TwoNumbers/: main.cpp
week-01/day-3/06-CodingHours/: main.cpp
week-01/day-3/07-FavouriteNumber/: main.cpp
week-01/day-3/08-Swap/: main.cpp
week-01/day-3/09-BMI/: main.cpp
week-01/day-3/10-DefineBasicInfo/: main.cpp
week-01/day-3/11-VariableMutation/: main.cpp
week-01/day-3/12-Cuboid/: main.cpp
week-01/day-3/13-SecondsInADay/: main.cpp
week-01/day-3/14-HelloUser/: main.cpp
week-01/day-3/15-MileToKilometer/: main.cpp
week-01/day-3/16-AnimalsAndLegs/: main.cpp
week-01/day-3/17-AverageOfInput/: main.cpp
week-01/day-3/18-OddEven/: main.cpp
week-01/day-3/19-OneTwoALot/: main.cpp
week-01/day-3/20-PrintBigger/: main.cpp
week-01/day-3/21-PartyIndicator/: main.cpp
week-01/day-4/Append A/: main.cpp
week-01/day-4/Append a(2)/: CMakeLists.txt  main.cpp
week-01/day-4/Change Element/: main.cpp
week-01/day-4/Colors/: main.cpp
week-01/day-4/Compare Length/: main.cpp
week-01/day-4/Double Items/: main.cpp
week-01/day-4/Doubling/: main.cpp
week-01/day-4/Factorial/: main.cpp
week-04/day-1/: README.md
week-04/day-4/InstrumentsToStringedInstruments/: CMakeLists.txt  ElectriCGuitar.cpp  ElectriCGuitar.h  bassguitar.cpp  bassguitar.h  instrument.h  main.cpp  stringedinstrument.cpp  stringedinstrument.h  violin.cpp  violin.h
(+366 files in other folders)
